MDEV-15946 MEDIUMINT(N<8) creates a wrong data type on conversion to string